--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><img src="Image/kamal-Profile.png" alt="Kamal Profile"></td>
         <td>  <h1>Kamal Narayan Mandal</h1>
           <p><strong>Computer Science Student</strong>||<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?utm_source=adwords&utm_medium=udemyads&utm_campaign=WebDevelopment_v.PROF_la.EN_cc.ROW_ti.8322&utm_content=deal4584&utm_term=_._ag_80385735315_._ad_535397279730_._kw__._de_c_._dm__._pl__._ti_dsa-774930035449_._li_9070016_._pd__._&matchtype=&gclid=CjwKCAiAz--OBhBIEiwAG1rIOgSEsPr274x-rQF7QcDBcT0IJJWo46A070buONTnS-5FF00tWbEL-hoCdzoQAvD_BwE"><em>Learning The Complete 2022 Web Development Bootcamp!</em></a></p>
-          <p>I ❤️ to play game like <a href="https://www.breakthroughbasketball.com/basics/basics.html">basketball</a> and <a href="https://www.wikihow.com/Play-Badminton">batminton.</a></p></td>
+          <p>I ❤️ to play game like <a href="https://www.breakthroughbasketball.com/basics/basics.html">basketball</a> and <a href="https://www.wikihow.com/Play-Badminton">badminton.</a></p></td>
       </tr>
     </table>
     <hr>
